Modified ids and nav-links to match user story requirements

--- a/fcc_technical_documentation_page/index.html
+++ b/fcc_technical_documentation_page/index.html
@@ -19,19 +19,19 @@
             <header>JavaScript Documentation</header>
         </div>
         <ul class="nav-items">
-            <li><a class="nav-link" href="#introduction">Introduction</a></li>
-            <li><a class="nav-link" href="#variables">Variables</a></li>
-            <li><a class="nav-link" href="#data_types">Data Types</a></li>
-            <li><a class="nav-link" href="#arrays">Arrays</a></li>
-            <li><a class="nav-link" href="#functions">Functions</a></li>
-            <li><a class="nav-link" href="#loops">Loops</a></li>
+            <li><a class="nav-link" href="#JavaScript_Introduction">JavaScript Introduction</a></li>
+            <li><a class="nav-link" href="#Variables">Variables</a></li>
+            <li><a class="nav-link" href="#Data_Types">Data Types</a></li>
+            <li><a class="nav-link" href="#Arrays">Arrays</a></li>
+            <li><a class="nav-link" href="#Functions">Functions</a></li>
+            <li><a class="nav-link" href="#Loops">Loops</a></li>
         </ul>      
     </nav>
 
     
     <!--Main Body Section-->   
     <main id="main-doc">
-        <section id="introduction" class="main-section">
+        <section id="JavaScript_Introduction" class="main-section">
             <header>JavaScript Introduction</header>
                 <span>
                     <p>JavaScript is a scripting or programming language that allows you to implement complex 
@@ -47,7 +47,7 @@
                 </span>
         </section>
 
-        <section id="variables" class="main-section">
+        <section id="Variables" class="main-section">
             <header>Variables</header>
                 <span>
                     <p>A variable is a container for storing information. The variable 
@@ -98,7 +98,7 @@
                 </span>
         </section>
 
-        <section id="data_types" class="main-section">
+        <section id="Data_Types" class="main-section">
             <header>Data Types</header>
                 <span>
                     <p>Data types describe the different types of data 
@@ -124,7 +124,7 @@
                 </span>
         </section>
 
-        <section id="arrays" class="main-section">
+        <section id="Arrays" class="main-section">
             <header>Arrays</header>
                 <span>
                     <p>Arrays are JavaScript's way of making lists. An array is a special type 
@@ -160,7 +160,7 @@
                 </span>
         </section>
 
-        <section id="functions" class="main-section">
+        <section id="Functions" class="main-section">
             <header>Functions</header>
                 <span>
                     <p>A function is a reusable block of code that groups together a 
@@ -212,7 +212,7 @@
                 </span>
         </section>
 
-        <section id="loops" class="main-section">
+        <section id="Loops" class="main-section">
             <header>Loops</header>
                 <span>
                     <p>Loops check a condition. If the condition returns <code class="para-code">true</code>, a code block will run. 
