Added images and <!--Project Section--> styling

--- a/fcc_personal_portfolio/index.html
+++ b/fcc_personal_portfolio/index.html
@@ -30,10 +30,28 @@
     <section id="projects">
         <h2>Coding Project Highlights</h2>
         <div class="project-container">
-            <a href="https://samorrissey.github.io/fcc_product_landing_page/index.html" target="_blank" class="project-tile">
-                <img class="project-image" src="https://samorrissey.github.io/fcc_product_landing_page/index.jpg" alt="project description" />
-                <h3 class="project-title">Title</h3>
+            <a href="https://samorrissey.github.io/fcc_product_landing_page/index.html" target="_blank">
+                <img class="project-image" src="resources/northstarSkisPage.JPG" 
+                alt="Product landing page for Northstar Skis" />
+                <span><h3 class="project-title">Product Landing Page</h3></span>
             </a>
+
+            <a href="https://samorrissey.github.io/fcc_survey_form/index.html" target="_blank">
+                <img class="project-image" src="resources/surveyPage.JPG" alt="National park survey form" />
+                <span><h3 class="project-title">Survey Form</h3></span>
+            </a>
+
+            <a href="https://samorrissey.github.io/fcc_technical_documentation_page/index.html" target="_blank">
+                <img class="project-image" src="resources/technicalDocumentationPage.JPG" 
+                alt="JavaScript Technical Documentation page" />
+                <span><h3 class="project-title">Technical Documentation Page</h3></span>
+            </a>
+
+            <a href="https://samorrissey.github.io/fcc_tribute_page/index.html" target="_blank">
+                <img class="project-image" src="resources/tributePage.JPG" alt="Tribute page featuring David Attenborough" />
+                <span><h3 class="project-title">Tribute Page</h3></span>
+            </a>
+            
         </div>
     </section>
 
