--- a/fcc_personal_portfolio/index.html
+++ b/fcc_personal_portfolio/index.html
@@ -23,7 +23,8 @@
 
     <!--Masthead (Welcome) Section-->
     <section id="welcome-section">
-       <h1>Text</h1> 
+       <h1>Sara</h1> 
+       <h2>Web Designer</h2>
     </section>
 
     <!--Project (Body) Section-->
@@ -63,9 +64,18 @@
                     <span><h3 class="project-title">Tribute Page</h3></span>
                 </a>
             </div>
-
         </div>
     </section>
+
+    <!--Contact Section-->
+    <footer id="contact">
+        <h2>Get a hold of me</h2>
+        <span>
+            <a id="profile-link" href="https://github.com/samorrissey/samorrissey.github.io" target="_blank"><h3>GitHub</h3></a>
+        </span>
+        <p>2021 &copy;</p>
+    </footer>
+
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
