--- a/fcc_personal_portfolio/index.html
+++ b/fcc_personal_portfolio/index.html
@@ -32,7 +32,7 @@
         <h2>Coding Project Highlights</h2>
         <div class="project-container">
             <!--Product Landing Page-->
-            <div>
+            <div class="project-tile">
                 <a href="https://samorrissey.github.io/fcc_product_landing_page/index.html" target="_blank">
                 <img class="project-image" src="resources/northstarSkisPage.JPG" 
                 alt="Product landing page for Northstar Skis" />
@@ -41,7 +41,7 @@
             </div>
 
             <!--Survey Form-->
-            <div>
+            <div class="project-tile">
                 <a href="https://samorrissey.github.io/fcc_survey_form/index.html" target="_blank">
                 <img class="project-image" src="resources/surveyPage.JPG" alt="National park survey form" />
                 <span><h3 class="project-title">Survey Form</h3></span>
@@ -49,7 +49,7 @@
             </div>
 
             <!--Technical Documentation Page-->
-            <div>
+            <div class="project-tile">
                 <a href="https://samorrissey.github.io/fcc_technical_documentation_page/index.html" target="_blank">
                     <img class="project-image" src="resources/technicalDocumentationPage.JPG" 
                     alt="JavaScript Technical Documentation page" />
@@ -58,7 +58,7 @@
             </div>
 
             <!--Tribute Page-->
-            <div>
+            <div class="project-tile">
                 <a href="https://samorrissey.github.io/fcc_tribute_page/index.html" target="_blank">
                     <img class="project-image" src="resources/tributePage.JPG" alt="Tribute page featuring David Attenborough" />
                     <span><h3 class="project-title">Tribute Page</h3></span>
