updated img file path

--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
         <h2>Coding Projects</h2>
         <div class="project-container">
     
-        <!--Video Ad: Winter is Calling-->
+        <!--Video Ad 1: Winter is Calling-->
         <div class="project-tile">
-            <a href="https://samorrissey.github.io/fcc_tribute_page/index.html" target="_blank">
+            <a href="https://samorrissey.github.io/video_ad1/index3.html" target="_blank">
                 <img class="project-image" src="resources/winterIsCalling.JPG" alt="XXL video ad for 'The Hunt' commercial" />
                 <span><h3 class="project-title">Video Ad: Winter is Calling</h3></span>
             </a>
         </div>
 
-        <!--Video Ad: Your Winter Adventure Awaits-->
+        <!--Video Ad 2: Your Winter Adventure Awaits-->
         <div class="project-tile">
-            <a href="https://samorrissey.github.io/fcc_survey_form/index.html" target="_blank">
+            <a href="https://samorrissey.github.io/video_ad2/index4.html" target="_blank">
                 <img class="project-image" src="resources/yourWinterAdventureAwaits.JPG" alt="XXL video ad for 'The Hunt' commercial" />
                 <span><h3 class="project-title">Video Ad: Your Winter Adventure Awaits</h3></span>
                 </a>
         </div>
 
-        <!--Video Ad: Shop Ski Equiment-->
+        <!--Video Ad 3: Shop Ski Equiment-->
         <div class="project-tile">
-            <a href="https://samorrissey.github.io/fcc_survey_form/index.html" target="_blank">
+            <a href="https://samorrissey.github.io/video_ad3/index5.html" target="_blank">
                 <img class="project-image" src="resources/multishop.JPG" alt="XXL video ad for 'The Hunt' commercial" />
                 <span><h3 class="project-title">Video Ad: Ski Equipment</h3></span>
                 </a>
