--- a/video_ad3/index5.html
+++ b/video_ad3/index5.html
@@ -25,7 +25,7 @@
                 <div class="cell">
                     <a href="https://www.xxl.no/vintersport/alpint-telemark-freeride-og-topptur/stovler-staver-og-bindinger/c/243001?sort=relevance"
                     target="_blank">
-                    <img src="images/skiBoot.jpg" alt="Downhill Ski Boots, blue in color">
+                    <img src="resources/skiBoot.jpg" alt="Downhill Ski Boots, blue in color">
                     <h2>Shop Boots</h2>
                     </a>
                 </div>
@@ -33,7 +33,7 @@
                 <div class="cell">
                     <a href="https://www.xxl.no/vintersport/alpint-telemark-freeride-og-topptur/ryggbeskyttere-og-annen-beskyttelse/alpinhjelmer-voksen/c/241917?sort=relevance"
                     target="_blank">
-                    <img src="images/helmet.jpg" alt="Downhill Ski Helmet, torquoise in color">
+                    <img src="resources/helmet.jpg" alt="Downhill Ski Helmet, torquoise in color">
                     <h2>Shop Helmets</h2>
                     </a>
                 </div>
@@ -41,14 +41,14 @@
                 <div class="cell">
                     <a href="https://www.xxl.no/vintersport/alpint-telemark-freeride-og-topptur/ski-og-skipakker/c/241908?sort=relevance"
                     target="_blank">
-                    <img src="images/skis.jpg" alt="Downhill Skis, multi-color pattern">
+                    <img src="resources/skis.jpg" alt="Downhill Skis, multi-color pattern">
                     <h2>Shop Skis</h2>
                     </a>
                 </div>
 
                 <div class="cell">
                     <a href="https://www.xxl.no/" target="_blank">
-                    <img id="ad-logo" src="images/XXL_Logo.svg" alt="XXL Logo, white">
+                    <img id="ad-logo" src="resources/XXL_Logo.svg" alt="XXL Logo, white">
                     </a>
                 </div>
 
