--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -132,7 +132,7 @@
         </footer>
         
 
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 </body>
 </html>
 
