--- a/fcc_technical_documentation_page/index.html
+++ b/fcc_technical_documentation_page/index.html
@@ -309,6 +309,6 @@
     </main>
     
     <script src="javascript/responsive.js"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 </body>
 </html>
