--- a/fcc_survey_form/index.html
+++ b/fcc_survey_form/index.html
@@ -337,6 +337,6 @@
         <button id="submit" class="form-button" type="submit">Submit</button>
     </div>
 </form>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 </div>
 </html>
