Updated #navbar link and url

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!--Navigation Section-->
     <nav id="navbar">
         <ul class="nav-list">
-            <li class="list-item"><span><a href="#welcome-section">Home</a></span></li>
+            <li class="list-item"><span>
+                <a href="https://github.com/samorrissey/samorrissey.github.io" target="_blank">
+                    View Source Code</a></span></li>
             <li class="list-item"><span><a href="#projects">Projects</a></span></li>
             <!-- <li class="list-item"><span><a href="#contact">Contact</a></span></li> -->
         </ul>
