--- a/video_ad1/index3.html
+++ b/video_ad1/index3.html
@@ -29,12 +29,23 @@
 
             <div class="cell ad-logo">
                 <a href="https://www.xxl.no/" target="_blank">
-                    <img src="resources/XXL_Logo.svg" alt="XXL logo white">
-                </a>
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 283.5 146.8" style="enable-background:new 0 0 283.5 146.8;" xml:space="preserve">
+               <style type="text/css">
+                   .st0{fill:#FFFFFF;}
+                   .st1{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;}
+               </style>
+               <path class="st0" d="M102.3,146.8H63.5l-12.2-44.4l-12.2,44.4H0l28.2-77.4L1,0h38.1l12.2,41.7L63.5,0h37.8L74.1,69.4L102.3,146.8z"
+                   />
+               <path class="st0" d="M211.2,146.8h-38.8l-12.2-44.4L148,146.8h-39.1l28.2-77.4L109.9,0H148l12.2,41.7L172.4,0h37.8l-27.2,69.4
+                   L211.2,146.8z"/>
+               <polygon class="st1" points="283.5,146.8 283.5,112 253.6,112 253.6,0 217.9,0 217.9,146.8 283.5,146.8 283.5,146.8 "/>
+               </svg>
+               </a>
             </div>
 
             <div class="cell cta-button">
-                <a href="https://www.xxl.no/" target="_blank"><button>Shop Now</button></a>
+                <a href="https://www.xxl.no/" target="_blank">Shop Now</a>
             </div>
 
         </div>
