created new class for GH logo and created styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Navigation Section-->
     <nav id="navbar">
         <ul class="nav-list">
-            <li class="list-item"><span>
+            <li class="list-item svg-icon baseline"><span>
                 <a href="https://github.com/samorrissey/samorrissey.github.io" target="_blank">
                     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34.61 33.71">
                         <defs>
